crates/toml_edit/fixtures/invalid/float/leading-point.stderr
TOML parse error at line 1, column 17
  |
1 | leading-point = .12345
  |                 ^
Invalid floating-point number
Expected leading digit
